Generation of mock data

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,10 +1,14 @@
 version: "3.8"
 services:
   backend:
-    image: python:3.10-bullseye
-    command: python3 -m http.server 8000
-#    ports:
-#      - "8000:8000"
+    build: .
+    command: sh -c "uvicorn app:app --host 0.0.0.0"
+    environment:
+      POSTGRES__HOST: postgres
+      POSTGRES__PASSWORD: EDIT_ME
+      POSTGRES__DB: postgres
+    ports:
+      - "8000:8000"
     depends_on:
       - postgres
 
@@ -21,6 +25,12 @@ services:
       - 5432
     ports:
       - "5432:5432"
+
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_DB" ]
+      interval: 1s
+      timeout: 1s
+      retries: 10
 
 
 volumes:
