--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -10,7 +10,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: postgres:15
